<resources>
    <string name="app_name">Visitatateur</string>
    <string name="title_place">Place</string>
    <string name="title_map">Map</string>
    <string name="title_profile">Profile</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_register">REGISTER</string>
    <string name="btn_logout">LOGOUT</string>
    <string name="btn_link_to_register">Not a member? Sign up now.</string>
    <string name="btn_link_to_login">Already a member? Login.</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="place_fragment">place_fragment</string>
    <string name="map_fragment">map_fragment</string>
    <string name="profile_fragment">profile_fragment</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Name</string>
    <string name="hint_pseudo">Pseudo</string>
    <string name="hint_first_name">First name</string>
    <string name="hint_last_name">Last name</string>
    <string name="btn_next">Next</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="men">Men</string>
    <string name="Women">Women</string>
    <string name="hint_phone_number">Phone number</string>
    <string name="hint_bubble_description">Description</string>
    <string name="btn_back_register">Go back.</string>
    <string name="welcome">Welcome</string>
    <string name="btn_continue">CONTINUE</string>
</resources>
